# tribe-tth-app

./: README.md  app.py  kai_chat.py  pyproject.toml  requirements.txt  sample_tth_jobs.csv  setup.sh
keboola-config/supervisord/services/: app.conf
