[project]
name = "tribe-tth-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
]

[tool.uv]
# App is flat scripts (app.py, kai_chat.py), not an installable package.
# package=false tells uv to install dependencies only and skip building the
# project, which otherwise fails with "Multiple top-level modules discovered".
package = false
